a small change in
not much to consider

--- a/asst2.html
+++ b/asst2.html
@@ -14,7 +14,7 @@ hi
 <div class="left">
 	Student information
 	<br>
-	<a href="http://www.bits-pilani.ac.in/"><u>Website</u></a>
+	<a href="http://www.bits-pilani.ac.in/"><u>Website of the college </u></a>
 </div>
 </fieldset>
 </body>
