--- a/asst2.html
+++ b/asst2.html
@@ -5,17 +5,48 @@
 	<link rel="stylesheet" type="text/css" href="asst2.css">
 </head>
 <body>
-<fieldset><div class="right">
-hi
+<fieldset>
+    <div class="right">
+
 <img src="bphc.png" >
-
-
+    <p class="Heading2"><b>Personal Information</b></p>
+    <br>
+    <br>
+<form>
+Name: <input type="text" name="Name">
+    <br>
+Email : <input type="text" name="Email">
+</form>
+    <br>
+<form>
+    gender:  
+    <input type="radio" name="gender" value="male" checked> Male
+    <input type="radio" name="gender" value="female"> Female
+    <input type="radio" name="gender" value="other"> Other
+</form> 
+    <br>
+<form>
+    Year : <select>
+            <option value="First">First</option>
+            <option value="Second">Second</option>
+            <option value="Third">Third</option>
+            <option value="Fourth">Fourth</option>
+            <option value="Fifth">Fifth</option>
+            </select>
+    </form>
+    <br>
+    <textarea rows="6" cols="50">
+    Comments here
+    </textarea>
+    <br><br>
+    <input type="submit" value="Submit">
 </div>
 <div class="left">
-	Student information
+	<p id="03">Student information </p>
 	<br>
-	<a href="http://www.bits-pilani.ac.in/"><u>Website of the college </u></a>
+	<a href="http://www.bits-pilani.ac.in/"><u>Website</u></a>
 </div>
+    
 </fieldset>
 </body>
 </html>
