changes in css file

--- a/asst2.html
+++ b/asst2.html
@@ -42,8 +42,8 @@ Email : <input type="text" name="Email">
     <input type="submit" value="Submit">
 </div>
 <div class="left">
-	<p id="03">Student information </p>
-	<br>
+	<p class="h3">Student information </p>
+	
 	<a href="http://www.bits-pilani.ac.in/"><u>Website</u></a>
 </div>
     
